--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
 <!-- Main APP -->
 <script src="js/app.js"></script>
+<!-- RESTAURANTS CONTROLLERS -->
+<script src="js/routes/restaurants/controller.js"></script>
+<script src="js/routes/restaurants/index.js"></script>
 </body>
 </html>
