--- a/public/js/routes/restaurants/template.html
+++ b/public/js/routes/restaurants/template.html
@@ -1,31 +1,18 @@
 <div class="container">
-  <h2>Basic Table</h2>
-  <p>{{4+1}}</p>
-  <p>The .table class adds basic styling (light padding and only horizontal dividers) to a table:</p>            
+  <h2>Restaurants</h2>
   <table class="table">
     <thead>
       <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
+        <th>Name</th>
+        <th>Borough</th>
+        <th>Cuisine</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
+      <tr ng-repeat="restaurant in vm.restaurants">
+        <td><a ng-href="!#/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
+        <td>{{restaurant.borough}}</td>
+        <td>{{restaurant.cuisine}}</td>
     </tbody>
   </table>
 </div>
