routes to restaurant in html

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
 <!-- RESTAURANTS CONTROLLERS -->
 <script src="js/routes/restaurants/controller.js"></script>
 <script src="js/routes/restaurants/index.js"></script>
+<!-- RESTAURANT CONTROLLERS -->
+<script src="js/routes/restaurant/controller.js"></script>
+<script src="js/routes/restaurant/index.js"></script>
 
 </body>
 
