--- a/public/js/routes/restaurants/template.html
+++ b/public/js/routes/restaurants/template.html
@@ -10,7 +10,7 @@
     </thead>
     <tbody>
       <tr ng-repeat="restaurant in vm.restaurants">
-        <td><a ng-href="!#/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
+        <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
         <td>{{restaurant.borough}}</td>
         <td>{{restaurant.cuisine}}</td>
     </tbody>
