--- a/public/js/routes/restaurants/template.html
+++ b/public/js/routes/restaurants/template.html
@@ -1,5 +1,6 @@
 <div class="container">
   <h2>Restaurants</h2>
+  <input type="button" ng-click="vm.page()">
   <table class="table">
     <thead>
       <tr>
