added buttons for pagination

--- a/public/js/routes/restaurants/template.html
+++ b/public/js/routes/restaurants/template.html
@@ -1,6 +1,7 @@
 <div class="container">
   <h2>Restaurants</h2>
-  <input type="button" ng-click="vm.page()">
+  <input type="button" ng-click="vm.pageHandler($event)" value="Pre">
+  <input type="button" ng-click="vm.pageHandler($event)" value="Advance">
   <table class="table">
     <thead>
       <tr>
