--- a/public/js/routes/restaurants/template.html
+++ b/public/js/routes/restaurants/template.html
@@ -1,6 +1,7 @@
 <div class="container">
   <h2>Restaurants</h2>
   <input type="button" ng-click="vm.page()">
+  <input type="text" ng-model="searchText">
   <table class="table">
     <thead>
       <tr>
@@ -10,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="restaurant in vm.restaurants">
+      <tr ng-repeat="restaurant in vm.restaurants | filter: searchText">
         <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
         <td>{{restaurant.borough}}</td>
         <td>{{restaurant.cuisine}}</td>
