--- a/public/js/routes/restaurants/template.html
+++ b/public/js/routes/restaurants/template.html
@@ -1,21 +1,29 @@
 <div class="container">
-  <h2>Restaurants</h2>
-  <input type="text" ng-model="searchText">
-  <input type="button" ng-click="vm.pageHandler($event)" value="Pre">
-  <input type="button" ng-click="vm.pageHandler($event)" value="Advance">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Borough</th>
-        <th>Cuisine</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="restaurant in vm.restaurants | filter: searchText">
-        <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
-        <td>{{restaurant.borough}}</td>
-        <td>{{restaurant.cuisine}}</td>
-    </tbody>
-  </table>
+    <h2>Restaurants</h2>
+ <div class="row">
+    <div ng-controller="filterCtrl as vm">
+        <input type="text" ng-model="searchText">
+    </div>
+ </div>
+<div class="row">
+    <div ng-controller="restaurantsCtrl as vm">
+        <input type="button" ng-click="vm.pageHandler($event)" value="Pre">
+        <input type="button" ng-click="vm.pageHandler($event)" value="Advance">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Borough</th>
+              <th>Cuisine</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="restaurant in vm.restaurants | filter: searchText">
+              <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
+              <td>{{restaurant.borough}}</td>
+              <td>{{restaurant.cuisine}}</td>
+          </tbody>
+        </table>
+     </div>
+</div>
 </div>
