--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
 <!-- RESTAURANT CONTROLLERS -->
 <script src="js/routes/restaurant/controller.js"></script>
 <script src="js/routes/restaurant/index.js"></script>
+<!-- BOROUGH CONTROLLERS -->
+<script src="js/routes/borough/controller.js"></script>
+<script src="js/routes/borough/index.js"></script>
 
 </body>
 
