--- a/public/js/routes/restaurants/template.html
+++ b/public/js/routes/restaurants/template.html
@@ -4,10 +4,14 @@
     <div ng-controller="filterCtrl as vm">
         <p>Filter in page</p>
         <input type="text" ng-model="filterPage">
-        <p>Filter by borough API</p>
-        <input type="text" ng-model="filterBoroughApi">
-        <p>Filter by cuisine API</p>
-        <input type="text" ng-model="filterCuisineApi">
+        <form action="" class="borough" ng-submit="vm.getValue(vm.filterBoroughApi)">
+            <p>Filter by borough API</p>
+            <input type="text" ng-model="vm.filterBoroughApi">
+        </form>
+        <form action="" class="cuisine" ng-submit="vm.getValue(vm.filterCuisineApi)">
+            <p>Filter by cuisine API</p>
+            <input type="text" ng-model="vm.filterCuisineApi">
+        </form>
         <br>
     </div>
  </div>
@@ -24,11 +28,15 @@
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="restaurant in vm.restaurants | filter: searchText">
+            <tr dir-paginate="restaurant in vm.restaurants | itemsPerPage: 10 | filter: searchText">
               <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
               <td>{{restaurant.borough}}</td>
               <td>{{restaurant.cuisine}}</td>
           </tbody>
         </table>
+        <div class="pagination">
+            <dir-pagination-controls [max-size="10" ] [direction-links="true " ] [boundary-links="true " ]>
+            </dir-pagination-controls>
+          </div>
      </div>
 </div>
