--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.9.0/loading-bar.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
-<script src="js/dependencies/pagination.js"></script>  
+<script src="js/dependencies/pagination.js"></script>
 <!-- Main APP -->
 <script src="js/app.js"></script>
  <!-- DataServices -->
@@ -32,6 +32,9 @@
 <!-- BOROUGH CONTROLLERS -->
 <script src="js/routes/borough/controller.js"></script>
 <script src="js/routes/borough/index.js"></script>
+<!-- CUISINE CONTROLLERS -->
+<script src="js/routes/cuisine/controller.js"></script>
+<script src="js/routes/cuisine/index.js"></script>
 
 </body>
 
