--- a/public/js/routes/restaurants/template.html
+++ b/public/js/routes/restaurants/template.html
@@ -26,7 +26,7 @@
           <tbody>
             <tr dir-paginate="restaurant in vm.restaurants | itemsPerPage: 10 | filter: searchText">
               <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
-              <td>{{restaurant.borough}}</td>
+              <td><a ng-href="#!/restaurants/borough/{{restaurant.borough}}">{{restaurant.borough}}</a></td>
               <td>{{restaurant.cuisine}}</td>
           </tbody>
         </table>
