--- a/public/js/routes/borough/template.html
+++ b/public/js/routes/borough/template.html
@@ -10,7 +10,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="restaurant in vm.restaurants">
+        <tr dir-paginate="restaurant in vm.restaurants | itemsPerPage: 10 ">
           <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
           <td>{{restaurant.address.street}}</td>
           <td>{{restaurant.borough}}</td>
@@ -18,4 +18,8 @@
       </tbody>
       </tbody>
     </table>
+    <div class="pagination">
+      <dir-pagination-controls [max-size="10" ] [direction-links="true " ] [boundary-links="true " ]>
+      </dir-pagination-controls>
+    </div>
   </div>
