routes with links semi

--- a/public/js/routes/borough/template.html
+++ b/public/js/routes/borough/template.html
@@ -14,7 +14,7 @@
           <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
           <td>{{restaurant.address.street}}</td>
           <td>{{restaurant.borough}}</td>
-          <td>{{restaurant.cuisine}}</td>
+          <td><a ng-href="#!/restaurants/cuisine/{{restaurant.cuisine}}">{{restaurant.cuisine}}</td>
       </tbody>
       </tbody>
     </table>
