added query page to url

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
 <!-- Main APP -->
 <script src="js/app.js"></script>
  <!-- DataServices -->
+ <script src="js/services/Helpers.js"></script>
  <script src="js/services/DataServices.js"></script>
 <!-- RESTAURANTS CONTROLLERS -->
 <script src="js/routes/restaurants/form/controller.js"></script>
