--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
-<script src="bower_components\angular-route\angular-route.min.js"></script>
+<script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="js/dependencies/pagination.js"></script>
 <!-- Main APP -->
 <script src="js/app.js"></script>
