--- a/client/js/routes/restaurants/template.html
+++ b/client/js/routes/restaurants/template.html
@@ -17,6 +17,8 @@
     <div ng-controller="restaurantsCtrl as vm">
       <br>
       <input type="button" value="Next" ng-click="vm.next()">
+      <p>NumPage: {{vm.numPage}}</p>
+
       <div>
         <select ng-model="vm.pageSelect" ng-change="vm.handlePage()">
           <option ng-value="10" selected disabled>Items per page</option>
@@ -29,20 +31,20 @@
         <table class="table">
           <thead>
             <tr>
-              <th>Num</th>
+ 
               <th>Name</th>
               <th>Borough</th>
               <th>Cuisine</th>
             </tr>
           </thead>
           <tbody>
-            <tr dir-paginate="restaurant in vm.restaurants | itemsPerPage: vm.pageSelect| filter: searchText " total-items="vm.totalRestaurants" current-page="vm.numPage" >
-              <td>{{ ($index + 1) + (vm.numPage - 1) * vm.pageSelect }}</td>
+            <tr ng-repeat="restaurant in vm.restaurants | filter: searchText "  >
+              
               <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
               <td><a ng-href="#!/restaurants/borough/{{restaurant.borough}}">{{restaurant.borough}}</a></td>
               <td><a ng-href="#!/restaurants/cuisine/{{restaurant.cuisine}}">{{restaurant.cuisine}}</a></td>
           </tbody>
         </table>
-        <dir-pagination-controls on-page-change="vm.next(newPageNumber)"></dir-pagination-controls>
+        <!-- <dir-pagination-controls on-page-change="vm.next(newPageNumber)"></dir-pagination-controls> -->
      </div>
 </div>
