--- a/client/index.html
+++ b/client/index.html
@@ -14,14 +14,14 @@
 <body ng-cloak>
   <ng-view></ng-view>
 
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
-<script src="js/dependencies/pagination.js"></script>
+<script src="bower_components/angular-paging/dist/paging.js"></script>
 <!-- Main APP -->
 <script src="js/app.js"></script>
  <!-- DataServices -->
- <script src="js/services/Helper.js"></script>
  <script src="js/services/DataServices.js"></script>
 <!-- RESTAURANTS CONTROLLERS -->
 <script src="js/routes/restaurants/form/controller.js"></script>
