--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="bower_components/angular-loading-bar/src/loading-bar.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Restaurants</title>
 </head>
@@ -19,11 +20,16 @@
 <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="bower_components/angular-paging/dist/paging.js"></script>
+<!-- Leaflet -->
+<script type="text/javascript" src="js/dependencies/GeoJSON/geojson.min.js"></script>
+<script src="bower_components/leaflet/dist/leaflet.js"></script>
 <!-- Main APP -->
 <script src="js/app.js"></script>
- <!-- DataServices -->
+ <!-- Services -->
  <script src="js/services/DataServices.js"></script>
+ <script src="js/services/LocationServices.js"></script>
 <!-- RESTAURANTS CONTROLLERS -->
+<script src="js/routes/restaurants/map/controller.js"></script>
 <script src="js/routes/restaurants/form/controller.js"></script>
 <script src="js/routes/restaurants/showRestaurants/controller.js"></script>
 <script src="js/routes/restaurants/index.js"></script>
