--- a/client/js/routes/restaurants/template.html
+++ b/client/js/routes/restaurants/template.html
@@ -1,19 +1,19 @@
 <div class="container">
-    <h2>Restaurants</h2>
- <div class="row">
+  <h2>Restaurants</h2>
+  <div class="row">
     <div ng-controller="filterCtrl as vm">
-        <form action="" class="borough" ng-submit="vm.filterBorough($event, vm.filterBoroughApi)" >
-            <p>Filter by borough API</p>
-            <input type="text" ng-model="vm.filterBoroughApi">
-        </form>
-        <form action="" class="cuisine" ng-submit="vm.filterCuisine($event, vm.filterCuisineApi)" >
-            <p>Filter by cuisine API</p>
-            <input type="text" ng-model="vm.filterCuisineApi">
-        </form>
-        <br>
+      <form action="" class="borough" ng-submit="vm.filterBorough($event, vm.filterBoroughApi)">
+        <p>Filter by borough API</p>
+        <input type="text" ng-model="vm.filterBoroughApi">
+      </form>
+      <form action="" class="cuisine" ng-submit="vm.filterCuisine($event, vm.filterCuisineApi)">
+        <p>Filter by cuisine API</p>
+        <input type="text" ng-model="vm.filterCuisineApi">
+      </form>
+      <br>
     </div>
- </div>
-<div class="row">
+  </div>
+  <div class="row">
     <div ng-controller="restaurantsCtrl as vm">
       <div>
         <select ng-model="vm.pageSelect" ng-change="vm.handlePage()">
@@ -24,31 +24,31 @@
           <option ng-value="100">100</option>
         </select>
       </div>
-        <table class="table">
-          <thead>
-            <tr>
- 
-              <th>Name</th>
-              <th>Borough</th>
-              <th>Cuisine</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="restaurant in vm.restaurants | filter: searchText "  >
-              
-              <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
-              <td><a ng-href="#!/restaurants/borough/{{restaurant.borough}}">{{restaurant.borough}}</a></td>
-              <td><a ng-href="#!/restaurants/cuisine/{{restaurant.cuisine}}">{{restaurant.cuisine}}</a></td>
-          </tbody>
-        </table>
-        <div paging
-        page="vm.numPage" 
-        page-size="vm.pageSelect" 
-        total="vm.pages"
-        show-prev-next="true"
-        show-first-last="true"
-        paging-action= "vm.next('foo', page)"
-        >
+      <table class="table">
+        <thead>
+          <tr>
+
+            <th>Name</th>
+            <th>Borough</th>
+            <th>Cuisine</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="restaurant in vm.restaurants | filter: searchText ">
+
+            <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
+            <td><a ng-href="#!/restaurants/borough/{{restaurant.borough}}">{{restaurant.borough}}</a></td>
+            <td><a ng-href="#!/restaurants/cuisine/{{restaurant.cuisine}}">{{restaurant.cuisine}}</a></td>
+        </tbody>
+      </table>
+      <div paging page="vm.numPage" page-size="vm.pageSelect" total="vm.pages" show-prev-next="true" show-first-last="true" paging-action="vm.next('foo', page)">
       </div>
-     </div>
-</div>
+    </div>
+  </div>
+  <div class="row">
+    <div ng-controller="mapCtrl as vm">
+      <div class="container">
+        <div id="map" class="map"></div>
+      </div>
+    </div>
+  </div>
