--- a/client/js/routes/cuisine/template.html
+++ b/client/js/routes/cuisine/template.html
@@ -10,18 +10,14 @@
         </tr>
       </thead>
       <tbody>
-        <!-- <tr ng-repeat="restaurant in vm.restaurants"> -->
-        <!-- "ng-repeat" para paginación -->
-        <tr dir-paginate="restaurant in vm.restaurants | itemsPerPage: 10 ">
+        <tr ng-repeat="restaurant in vm.restaurants">
           <td><a ng-href="#!/restaurant/{{restaurant._id}}">{{restaurant.name}}</a></td>
           <td>{{restaurant.address.street}}</td>
-          <td><a ng-href="#!/restaurants/borough/{{restaurant.borough}}">{{restaurant.borough}}</a></td>
-          <td>{{restaurant.cuisine}}</td>
+          <td>{{restaurant.borough}}</td>
+          <td><a ng-href="#!/restaurants/cuisine/{{restaurant.cuisine}}">{{restaurant.cuisine}}</td>
       </tbody>
       </tbody>
     </table>
-    <div class="pagination">
-      <dir-pagination-controls [max-size="10" ] [direction-links="true " ] [boundary-links="true " ]>
-      </dir-pagination-controls>
+    <div paging page="1" page-size=20 total="44" show-prev-next="true" show-first-last="true" paging-action="vm.next('foo', page)">
     </div>
   </div>
